// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getApplicableRuleEffectsForTrackerProgram > RulesEngine called with computed arguments from getApplicableRuleEffectsForTrackerProgram 1`] = `
{
  "currentEvent": {
    "da1Id": "currentEventText",
    "dueDate": "2021-05-31T09:51:38.134",
    "enrollmentId": "vVtmDlsu3me",
    "enrollmentStatus": "ACTIVE",
    "eventDate": "2021-05-31T00:00:00.000",
    "eventId": "BxGzDJK3JqN",
    "orgUnitId": "DiszpKrYNg8",
    "orgUnitName": "Ngelehun CHC",
    "programId": "IpHINAT79UW",
    "programStageId": "A03MvHHogjR",
    "programStageName": undefined,
    "status": "ACTIVE",
    "trackedEntityInstanceId": "vCGpQAWG17I",
  },
  "dataElements": {
    "da1Id": {
      "id": "da1Id",
      "optionSetId": undefined,
      "valueType": "TEXT",
    },
  },
  "optionSets": {
    "0": {
      "displayName": undefined,
      "id": "optionSet1",
      "options": [],
    },
  },
  "otherEvents": [
    {
      "da1Id": "otherEventText",
      "dueDate": "2021-05-31T09:51:38.134",
      "enrollmentId": "vVtmDlsu3me",
      "enrollmentStatus": "ACTIVE",
      "eventDate": "2021-05-31T00:00:00.000",
      "eventId": "BxGzDJK3JqN",
      "orgUnitId": "DiszpKrYNg8",
      "orgUnitName": "Ngelehun CHC",
      "programId": "IpHINAT79UW",
      "programStageId": "A03MvHHogjR",
      "status": "ACTIVE",
      "trackedEntityInstanceId": "vCGpQAWG17I",
    },
  ],
  "programRulesContainer": {
    "constants": [
      {
        "id": "constantId1",
        "value": "1",
      },
    ],
    "programRuleVariables": [
      {
        "dataElementId": "UXz7xuGCEhU",
        "displayName": "Test",
        "id": "PUQZWgmQ0jx",
        "programId": "IpHINAT79UW",
        "programRuleVariableSourceType": "DATAELEMENT_NEWEST_EVENT_PROGRAM",
        "useNameForOptionSet": true,
      },
      {
        "dataElementId": "H6uSAMO5WLD",
        "displayName": "apgarcomment",
        "id": "aKpfPKSRQnv",
        "programId": "IpHINAT79UW",
        "programRuleVariableSourceType": "DATAELEMENT_NEWEST_EVENT_PROGRAM",
        "useNameForOptionSet": true,
      },
      {
        "dataElementId": "a3kGcGDCuk6",
        "displayName": "apgarscore",
        "id": "g2GooOydipB",
        "programId": "IpHINAT79UW",
        "programRuleVariableSourceType": "DATAELEMENT_NEWEST_EVENT_PROGRAM",
        "useNameForOptionSet": true,
      },
    ],
    "programRules": [
      {
        "condition": "true",
        "displayName": "TestRule",
        "id": "JJDQxgHuuL2",
        "programId": "IpHINAT79UW",
        "programRuleActions": [
          {
            "data": "#{Test}",
            "id": "CQaifjkoFEU",
            "location": "feedback",
            "programRuleActionType": "DISPLAYTEXT",
          },
        ],
      },
      {
        "condition": "true",
        "displayName": "rule1",
        "id": "rule1Id",
        "name": "rule1",
        "priority": 1,
        "programId": "IpHINAT79UW",
        "programRuleActions": [],
        "programStageId": "st1Id",
      },
    ],
  },
  "selectedEnrollment": {
    "enrolledAt": "2021-05-31T00:00:00.000",
    "enrollmentId": "vVtmDlsu3me",
    "occurredAt": "2021-05-31T00:00:00.000",
  },
  "selectedEntity": {
    "lZGmxYbs96q": "1995-12-17T03:24:00",
    "lZGmxYbs97q": 5,
    "zDhUuAYrxNC": "someTextValue",
  },
  "selectedOrgUnit": {
    "code": "Ngelehun CHC",
    "id": "DiszpKrYNg8",
  },
  "selectedUserRoles": [
    "UYXOT4A7JMI",
    "Ufph3mGRmMo",
    "Euq3XfEIEbx",
    "cUlTcejWree",
    "aNk5AyC7ydy",
    "TMK9CMZ2V98",
    "Ql6Gew7eaX6",
    "Pqoy4DLOdMK",
    "DRdaVRtwmG5",
    "jRWSNIHdKww",
    "txB7vu1w2Pr",
    "xJZBzAHI88H",
    "XS0dNzuZmfH",
  ],
  "trackedEntityAttributes": {
    "lZGmxYbs96q": {
      "id": "lZGmxYbs96q",
      "optionSetId": undefined,
      "valueType": "DATE",
    },
    "lZGmxYbs97q": {
      "id": "lZGmxYbs97q",
      "optionSetId": undefined,
      "valueType": "NUMBER",
    },
    "w75KJ2mc4zz": {
      "id": "w75KJ2mc4zz",
      "optionSetId": undefined,
      "valueType": "ORGANISATION_UNIT",
    },
    "zDhUuAYrxNC": {
      "id": "zDhUuAYrxNC",
      "optionSetId": undefined,
      "valueType": "TEXT",
    },
  },
}
`;

exports[`getApplicableRuleEffectsForTrackerProgram RulesEngine called with computed arguments from getApplicableRuleEffectsForTrackerProgram 1`] = `
Object {
  "currentEvent": Object {
    "da1Id": "currentEventText",
    "dueDate": "2021-05-31T09:51:38.134",
    "enrollmentId": "vVtmDlsu3me",
    "enrollmentStatus": "ACTIVE",
    "eventDate": "2021-05-31T00:00:00.000",
    "eventId": "BxGzDJK3JqN",
    "orgUnitId": "DiszpKrYNg8",
    "orgUnitName": "Ngelehun CHC",
    "programId": "IpHINAT79UW",
    "programStageId": "A03MvHHogjR",
    "programStageName": undefined,
    "status": "ACTIVE",
    "trackedEntityInstanceId": "vCGpQAWG17I",
  },
  "dataElements": Object {
    "da1Id": Object {
      "id": "da1Id",
      "optionSetId": undefined,
      "valueType": "TEXT",
    },
  },
  "optionSets": Object {
    "0": Object {
      "displayName": undefined,
      "id": "optionSet1",
      "options": Array [],
    },
  },
  "otherEvents": Array [
    Object {
      "da1Id": "otherEventText",
      "dueDate": "2021-05-31T09:51:38.134",
      "enrollmentId": "vVtmDlsu3me",
      "enrollmentStatus": "ACTIVE",
      "eventDate": "2021-05-31T00:00:00.000",
      "eventId": "BxGzDJK3JqN",
      "orgUnitId": "DiszpKrYNg8",
      "orgUnitName": "Ngelehun CHC",
      "programId": "IpHINAT79UW",
      "programStageId": "A03MvHHogjR",
      "status": "ACTIVE",
      "trackedEntityInstanceId": "vCGpQAWG17I",
    },
  ],
  "programRulesContainer": Object {
    "constants": Array [
      Object {
        "id": "constantId1",
        "value": "1",
      },
    ],
    "programRuleVariables": Array [
      Object {
        "dataElementId": "UXz7xuGCEhU",
        "displayName": "Test",
        "id": "PUQZWgmQ0jx",
        "programId": "IpHINAT79UW",
        "programRuleVariableSourceType": "DATAELEMENT_NEWEST_EVENT_PROGRAM",
        "useNameForOptionSet": true,
      },
      Object {
        "dataElementId": "H6uSAMO5WLD",
        "displayName": "apgarcomment",
        "id": "aKpfPKSRQnv",
        "programId": "IpHINAT79UW",
        "programRuleVariableSourceType": "DATAELEMENT_NEWEST_EVENT_PROGRAM",
        "useNameForOptionSet": true,
      },
      Object {
        "dataElementId": "a3kGcGDCuk6",
        "displayName": "apgarscore",
        "id": "g2GooOydipB",
        "programId": "IpHINAT79UW",
        "programRuleVariableSourceType": "DATAELEMENT_NEWEST_EVENT_PROGRAM",
        "useNameForOptionSet": true,
      },
    ],
    "programRules": Array [
      Object {
        "condition": "true",
        "displayName": "TestRule",
        "id": "JJDQxgHuuL2",
        "programId": "IpHINAT79UW",
        "programRuleActions": Array [
          Object {
            "data": "#{Test}",
            "id": "CQaifjkoFEU",
            "location": "feedback",
            "programRuleActionType": "DISPLAYTEXT",
          },
        ],
      },
      Object {
        "condition": "true",
        "displayName": "rule1",
        "id": "rule1Id",
        "name": "rule1",
        "priority": 1,
        "programId": "IpHINAT79UW",
        "programRuleActions": Array [],
        "programStageId": "st1Id",
      },
    ],
  },
  "selectedEnrollment": Object {
    "enrolledAt": "2021-05-31T00:00:00.000",
    "enrollmentId": "vVtmDlsu3me",
    "occurredAt": "2021-05-31T00:00:00.000",
  },
  "selectedEntity": Object {
    "lZGmxYbs96q": "1995-12-17T03:24:00",
    "lZGmxYbs97q": 5,
    "zDhUuAYrxNC": "someTextValue",
  },
  "selectedOrgUnit": Object {
    "code": "Ngelehun CHC",
    "id": "DiszpKrYNg8",
  },
  "selectedUserRoles": Array [
    "UYXOT4A7JMI",
    "Ufph3mGRmMo",
    "Euq3XfEIEbx",
    "cUlTcejWree",
    "aNk5AyC7ydy",
    "TMK9CMZ2V98",
    "Ql6Gew7eaX6",
    "Pqoy4DLOdMK",
    "DRdaVRtwmG5",
    "jRWSNIHdKww",
    "txB7vu1w2Pr",
    "xJZBzAHI88H",
    "XS0dNzuZmfH",
  ],
  "trackedEntityAttributes": Object {
    "lZGmxYbs96q": Object {
      "id": "lZGmxYbs96q",
      "optionSetId": undefined,
      "valueType": "DATE",
    },
    "lZGmxYbs97q": Object {
      "id": "lZGmxYbs97q",
      "optionSetId": undefined,
      "valueType": "NUMBER",
    },
    "w75KJ2mc4zz": Object {
      "id": "w75KJ2mc4zz",
      "optionSetId": undefined,
      "valueType": "ORGANISATION_UNIT",
    },
    "zDhUuAYrxNC": Object {
      "id": "zDhUuAYrxNC",
      "optionSetId": undefined,
      "valueType": "TEXT",
    },
  },
}
`;
